docs: HTTP API docs for wishlist API
